Fix image height jump

--- a/components/Card/CardDetails.module.scss
+++ b/components/Card/CardDetails.module.scss
@@ -17,8 +17,13 @@
   justify-content: flex-start;
 }
 
-.image {
+.imageWrapper {
   width: 200px;
+  height: 280px;
+}
+
+.image {
+  width: 100%;
   height: auto;
   box-shadow: 0px 2px 5px #95a5a6;
 }
